Deleted many images (.png) files and changed to temperature.png instead of engine-temp.png and updated the html file accordingly.

--- a/iot-onboard-manufacturing/index.html
+++ b/iot-onboard-manufacturing/index.html
@@ -28,7 +28,7 @@
                   <br />
                   <br />
                   <br /><br />
-                  <img src="images/car.png" width=95% height=95%/>
+                  <img src="images/manufacturing-plant.png" width=95% height=95%/>
                   <br />
                   <br />
                   <br />
@@ -64,9 +64,9 @@
                            </tr>
                         </table>
                      </div>
-                     <!--Engine Temperature-->
+                     <!--Temperature-->
                      <div id="ds2" class="submenu" style="display: none">
-                        <img src="images/engine-temp.png" style="float:left; position:relative;" />
+                        <img src="images/temperature.png" style="float:left; position:relative;" />
                         <div class="detailsHeading">Temperature</div>
                         <br />
                         <br />
