Change html line 88 from "Engine Speed" to "Speed".

--- a/iot-onboard-manufacturing/index.html
+++ b/iot-onboard-manufacturing/index.html
@@ -85,7 +85,7 @@
                      <!--Speed-->
                      <div id="ds3" class="submenu" style="display: none">
                         <img src="images/speed.png" style="float:left; position:relative;;" />
-                        <div class="detailsHeading">Engine Speed</div>
+                        <div class="detailsHeading">Speed</div>
                         <br />
                         <br />
                         <table width="300" border="0" cellspacing="10" cellpadding="0">
