Changed the name of the Sherwin-Williams image file (.png file) and html file from "swlogo" to "sherwin-williams-logo"

--- a/iot-onboard-manufacturing/index.html
+++ b/iot-onboard-manufacturing/index.html
@@ -13,7 +13,7 @@
          <div id="topContainerYellowbar">
             <span id="LoginName" class="showValues"></span>
             <div id="topContainerLogo">
-               <img src="images/swlogo.png" />
+               <img src="images/sherwin-williams-logo.png" />
             </div>
          </div>
          <div id="ContentContainer">
